[package]
name = "ecmui"
version = "0.1.0"
edition = "2021"
description = "EVA ICS Cloud Manager UI application"
authors = ["Sergei S. <div@altertech.com>"]
license = "LGPL"
repository = "https://github.com/eva-ics/ecmui"
readme = "README.md"
keywords = ["eva-ics", "automation", "cloud", "client"]

[dependencies]
cpp_core = "0.6.0"
qt_core = "0.5.0"
qt_gui = "0.5.0"
qt_widgets = "0.5.0"
qt_ui_tools = "0.5.0"
qt_charts = "0.5.0"
lazy_static = "1.4.0"
serde = { version = "1.0.139", features = ["derive"] }
eva-common = { version = "0.1.163", features = ["logic", "common-payloads", "actions"] }
eva-client = "0.1.5"
tokio = { version = "1.19.2", features = ["full"] }
once_cell = "1.13.0"
arboard = "2.1.1"
chrono = "0.4.19"
directories = "4.0.1"
serde_yaml = "0.8.25"
bmart-derive = "0.1.3"
elbus = "0.2.9"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
serde_json = "1.0.82"
force-send-sync = "1.0.0"

[target.x86_64-unknown-linux-gnu.dependencies]
openssl-sys = { version = "0.9.75", features = ["openssl-src", "vendored"] }

[build-dependencies]
qt_ritual_build = "0.5.0"
winres = "0.1.12"

[profile.release]
strip = true
lto = true
codegen-units = 1

[package.metadata.bundle]
name = "ecmui"
identifier = "com.bohemia-automation.ecmui"
icon = ["ui/i/logo.png"]
copyright = "Copyright (c) Bohemia Automation Ltd 2022. All rights reserved."
short_description = "EVA ICS Cloud Manager UI"
long_description = """
Cloud Manager UI for EVA ICS v4 (https://www.eva-ics.com/) industrial
automation cloud-SCADA platform
"""
deb_depends = ["libqt5charts5 (>= 5.12.0)", "libqt5widgets5 (>= 5.12.0)", "libqt5gui5 (>= 5.12.0)"]
